tests/errors/syn_while7.java
public class syn_while7 {
public static void main(String[] args){
while ( true || false ) {

}
}